Add header and nav bar. Need to style them

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     
-    <header></header>
+    <header class="header">
+        <h1 class="title">Ghibli Movie Database</h1>
+    </header>
 
-    <div></div>
+    <div class="nav">
+        <div class="nav-element">Movies</div>
+        <div class="nav-element">Characters</div>
+        <div class="nav-element">Xyz</div>
+    </div>
     <div></div>
 
 
