Working on nav bar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
         <h1 class="title">Ghibli Movie Database</h1>
     </header>
 
-    <div class="nav">
-        <div class="nav-element">Movies</div>
-        <div class="nav-element">Characters</div>
-        <div class="nav-element">Xyz</div>
-    </div>
+    <nav` class="nav">
+        <div class="wrapper">
+            <div class="links-container">Movies</div>
+            <div class="links-container">Characters</div>
+            <div class="links-container">Songs</div>
+        </div>
+        
+    </nav>
     <div></div>
 
 
