Fix nav bar. Add async function to fetch movie list

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <nav` class="nav">
         <div class="wrapper">
-            <div class="links-container">Movies</div>
-            <div class="links-container">Characters</div>
-            <div class="links-container">Songs</div>
+            <div class="links-container"><div class="link btn">Movies</div></div>
+            <div class="links-container"><div class="link btn">Characters</div></div>
+            <div class="links-container"><div class="link btn">Songs</div></div>
         </div>
         
     </nav>
