Add movie card display

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
         <h1 class="title">Ghibli Movie Database</h1>
     </header>
 
-    <nav` class="nav">
+    <nav class="nav">
         <div class="wrapper">
             <div class="links-container"><div class="link btn">Movies</div></div>
             <div class="links-container"><div class="link btn">Characters</div></div>
             <div class="links-container"><div class="link btn">Songs</div></div>
-        </div>
-        
+        </div>  
     </nav>
-    <div></div>
+
+    <div id="container">
+        <!-- <div class="card-container"></div> -->
+    </div>
 
 
     <script src="./assets/script.js"></script>
