Minor changes. Add async function to fetch characters

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <nav class="nav">
         <div class="wrapper">
-            <div class="links-container"><div class="link btn">Movies</div></div>
-            <div class="links-container"><div class="link btn">Characters</div></div>
-            <div class="links-container"><div class="link btn">Songs</div></div>
+            <div class="links-container"><div class="link btn" data-category="movies">Movies</div></div>
+            <div class="links-container"><div class="link btn" data-category="characters">Characters</div></div>
+            <div class="links-container"><div class="link btn" data-category="songs">Songs</div></div>
         </div>  
     </nav>
 
