--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <div class="links-container"><div class="link btn" data-category="songs">Songs</div></div>
         </div>  
     </nav>
-
+    <br><br><br><br><br><br><br>
+    <!-- <img src="./assets/images/ashitaka.webp" alt=""> -->
     <div id="container">
         <!-- <div class="card-container"></div> -->
     </div>
