--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="wrapper">
             <div class="links-container"><div class="link btn" data-category="movies">Movies</div></div>
             <div class="links-container"><div class="link btn" data-category="characters">Characters</div></div>
-            <div class="links-container"><div class="link btn" data-category="places">Songs</div></div>
+            <div class="links-container"><div class="link btn" data-category="places">Places</div></div>
         </div>  
     </nav>
     <br><br><br><br><br><br><br>
